[gd_scene load_steps=4 format=3 uid="uid://cwxhsa4gp382k"]

[ext_resource type="Theme" uid="uid://bwp1qjsfax8si" path="res://assets/themes/gameBoyTheme.tres" id="1_ta3j0"]
[ext_resource type="Script" path="res://scenes/ui/menus/main_menu/main_menu.gd" id="2_8m823"]
[ext_resource type="AudioStream" uid="uid://dib76hhiwt7js" path="res://assets/music/xDeviruchi - Mysterious Dungeon.wav" id="3_4ky8x"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ta3j0")
script = ExtResource("2_8m823")

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0862745, 0.121569, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.0
offset_right = 232.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Dark Labyrinth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
text = "Start Game"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
text = "Credits
"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_next = NodePath("../StartGameButton")
text = "Exit
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4ky8x")
volume_db = -24.36
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/QuitButton" to="." method="_on_exit_game_button_pressed"]
